<resources>
    <string name="app_name">TinyCircuit</string>
    <string-array name="menuitems">
        <item>Batterij</item>
        <item>Gloeilamp</item>
        <item>Weerstand</item>
        <item>Schakelaar</item>
        <item>Bel</item>
    </string-array>

    <string name="exercise">Opgaven</string>
    <string name="freeplay">Vrij spel</string>
    <string name="button_hint">Geef me een hint</string>
    <string name="button_ok">Oke</string>
    <string name="scenario_locked">Niet beschikbaar</string>
    <string name="scenario_locked_explanation">Dit scenario is nog niet beschikbaar. Speel de eerdere scenario\'s om deze vrij te spelen!</string>
    <string name="scenario_explanation_title">Uitleg</string>
    <string name="scenario_freeplay">Dit is het vrije spel. Hier kan je zelf een circuit ontwerpen.</string>
    <string name="scenario1_explanation">Verbind het lampje met de batterij, zodat het lampje stroom heeft. Je kan een verbinding maken door op het draad icoon te tikken, en dan op de witte puntjes van een component.</string>
    <string name="scenario2_explanation">Voeg een weerstand toe aan het circuit, zodat je het lampje niet kapot gaat. Om een weerstand toe te voegen, moet je een draad weg halen. Dit kan je doen door in draad modus op een draad te tikken. Voer het circuit uit als je klaar bent.</string>
    <string name="scenario3_explanation">Voeg een schakelaar toe aan het circuit, zodat je het lampje aan en uit kan zetten. Druk daarna op de knop om de lamp aan te zetten.</string>
    <string name="scenario4_explanation">Je weet nu hoe je een circuit moet maken, het is tijd om het zelf te proberen! Maak nu zelf een circuit met een lampje dat door een schakelaar aan en uit gezet kan worden.</string>
    <string name="scenario5_explanation">Een batterij kan meer dan alleen een lampje laten branden. Voeg een bel toe aan je circuit!</string>
    <string name="scenario6_explanation">Je kan ook 2 circuits maken met 1 batterij! Maak dit circuit af zodat de schakelaar slechts één lamp bedient.</string>
    <string name="scenario7_explanation">Je kan draden ook op splitsen, hierdoor kan je 2 circuits maken met 1 batterij! Maak dit scenario af door aan de ene kant een lamp toe te voegen en andere een schakelaar.</string>
    <string name="scenario_nonexisting">Helaas bestaat dit scenario nog niet. Probeer als vervanger hier je eigen circuit te maken.</string>
    <string name="scenario_complete">Goed gedaan!</string>
    <string name="scenario_not_complete">Het circuit klopt nog niet!</string>
    <string name="run">Uitvoeren</string>
    <string name="scenario1_complete">Jammer genoeg is de lamp kapot gegaan! In het volgende opdracht ga je leren hoe je de lamp heel houdt.</string>
    <string name="last_scenario_complete">Gefeliciteerd! Je hebt alle opdrachten gehaald. Nu kan je in het vrije spel gaan doen wat je wil!</string>

    <!--Specific feedback-->
    <string name="no_full_circle">Het circuit is nog niet gesloten.</string>
    <string name="wrong_connection">Een verbinding klopt niet.</string>
    <string name="lamp_off">De lamp staat nog niet aan.</string>
    <string name="no_connection">Een component is niet verbonden.</string>
    <string name="resistance_required">Een circuit heeft weerstand nodig.</string>
    <string name="switch_required">Zorg er voor dat het licht aan en uit kan.</string>
    <string name="lamp_required">Het is nog donker, voeg een lamp toe!</string>
    <string name="component_count">Het aantal componenten klopt niet.</string>
    <string name="no_bell">Er is nog geen bel aangesloten aan het circuit.</string>

    <!--Arrays with feedback-->
    <string-array name="positive_feedback">
        <item>"Goed gedaan!"</item>
        <item>"Dit circuit klopt!"</item>
        <item>"Het gaat goed!"</item>
        <item>"Je bent klaar voor een grotere uitdaging!"</item>
        <item>"Volgens mij was dit te makkelijk!"</item>
    </string-array>
    <string-array name="negative_feedback">
        <item>"Er klopt iets niet."</item>
        <item>"Je bent goed bezig, maar er zit een foutje in het circuit."</item>
        <item>"Kijk nog eens goed naar het circuit."</item>
        <item>"De opdracht is nog niet klaar, maar je bent er bijna!"</item>
        <item>"Er is nog een aanpassing nodig!"</item>
    </string-array>

    <string name="title_aboutactivity">Wie zijn wij?</string>
    <string name="project_manager">Project manager: \nWilmer Zwietering\n\nLead developers:\nBernd van den Hoek\nMaaike Galama\n\nFront end developer:\nJesper Steensma</string>
    <string name="website">Voor meer informatie kijk op onze website:</string>

    <!--Settings-->
    <string name="setting_vibration">Trillingen</string>
    <string name="setting_language">Taal</string>
    <string name="setting_reset_progress">Begin opnieuw</string>
    <string name="setting_reset">Wis voortgang</string>
    <string name="reset_warning">Weet je zeker dat je opnieuw wilt beginnen?</string>
</resources>
