<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/circuitboard"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.edulectronics.tinycircuit.Views.AboutActivity">

    <TextView
        android:text="@string/title_aboutactivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:id="@+id/textView"
        android:textColor="Black"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/project_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:textSize="20dp"
        android:textColor="Black"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView" />

    <TextView
        android:text="@string/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="Black"
        android:layout_alignParentBottom="true"
        android:id="@+id/textView6" />

    <TextView
        android:text="  http://bit.ly/tinycircuit"
        android:layout_width="match_parent"
        android:autoLink="web"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView6"
        android:id="@+id/textView7" />
</RelativeLayout>
